# tdis

./: .gitignore  .repomixignore  CMakeLists.txt  README.md  pyproject.toml  use_docker.md
.devcontainer/: devcontainer.json  tasks.json
.github/workflows/: documentation.yml  linux-build-test.yml  pytdis.yml
cmake/: jana_plugin.cmake
containers/tdis/: Dockerfile
containers/tdis-pre/: Dockerfile
containers/ubuntu-root/: Dockerfile
docker/: build_images.py
docker/reproducer/: Dockerfile
docker/tdis/: Dockerfile
docker/tdis-pre/: Dockerfile
docs/: _sidebar.md  approach.md  architecture.md  containers.md  ifarm-tutorial.md  implementation.md  index.html  index.md  install.md  resources.md
docs/_media/: algo_flow_01.drawio  algo_flow_02.drawio  image-hierarhy.drawio
docs/development/: contributing.md  development.md
geometry/: g4sbs_mtpc.root
pytdis/: MANIFEST.in  README.md  pip_readme.md  pyproject.toml  tdisreco.py
pytdis/examples/: 01_basic_usage.py
pytdis/pytdis/: __init__.py  __main__.py  geometry.py  io.py  version.py
pytdis/pytdis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pytdis/pytdis/cli/: __init__.py  plot.py
pytdis/tests/: test_convert.py  test_geometry.py  test_io.py
python/: 2d_event_display.html  2d_event_display.py  2d_event_display_server.py  blender_cylinder_track.py  draw_pads.py  track_data.txt
source/extensions/spdlog/: SpdlogToActs.h
source/tdis/: CMakeLists.txt  DatamodelGlue.h  PadGeometryHelper.hpp  layout.yaml  tdis_main.cpp
source/tdis/io/: DigitizedDataEventSource.hpp  PodioWriteProcessor.hpp
source/tdis/services/: LogService.hpp
source/tdis/tests/: SplitDataStringTests.cpp
source/tdis/tracking/: ActsGeometryProvider.cc  ActsGeometryProvider.h  ActsGeometryService.cc  ActsGeometryService.h  ActsLogHeplers.h  BuildMtpcDetector.cpp  BuildMtpcDetector.cpp.v1.bck  BuildMtpcDetector.hpp  BuildMtpcDetectorCG.cpp  BuildMtpcDetectorGEM.cpp  BuildMtpcDetectorGEM.hpp  BuildTelescopeDetector.cpp  BuildTelescopeDetector.hpp  CKFTracking.cc  CKFTracking.h  CKFTrackingFunction.cc  CkfFitFactory.h  ConfiguredFitter.hpp  ConfiguredKalmanFitter.cpp  ConfiguredKalmanFitter.h  DD4hepBField.cc  DD4hepBField.h  KalmanFitterFunction.cpp  KalmanFittingFactory.cpp  KalmanFittingFactory.h  Measurement2DFactory.h  MeasurementCalibration.cpp  MtpcDetectorElement.cpp  MtpcDetectorElement.hpp  ReconstructedHitFactory.h  RefittingCalibrator.cpp  RefittingCalibrator.h  TelescopeDetector.cpp  TelescopeDetectorElement.cpp  TrackFitterFunction.hpp  TruthTrackParameterFactory.h
standalone/: CMakeLists.txt
tpc-tracking-display/: package-lock.json  package.json
tpc-tracking-display/public/: event_data.txt
tpc-tracking-display/src/: App.tsx
tpc-tracking-display/src/components/: FileUploader.tsx  RawDataDisplay.tsx  TrackingDisplay.tsx
tpc-tracking-display/src/store/: useStore.ts
tpc-tracking-display/src/utils/: DataLoader.ts  Geometry.ts
